--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>jenkins-git-integration</finalName>
+    <finalName>2018ht66507</finalName>
   </build>
 </project>
