--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jenkins-git-integration</name>
+	<name>2018ht66507</name>
 	<comment></comment>
 	<projects>
 	</projects>
