--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,15 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+	<groupId>org.jacoco</groupId>
+  <artifactId>jacoco-maven-plugin</artifactId>
+  <version>0.8.7-SNAPSHOT</version>	
+    </dependency>
   </dependencies>
   <build>
-   <finalName>2018ht66507</finalName>  
+   <finalName>2018ht66507</finalName> 
+
 	</build>
+	
 </project>
