--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>jenkins-git-integration Maven Webapp</name>
   <url>http://maven.apache.org</url>
+	    <properties>
+        <!-- https://maven.apache.org/general.html#encoding-warning -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <junit.version>5.3.1</junit.version>
+        <jacoco.version>0.8.2</jacoco.version>
+    </properties>
+	
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,14 +23,27 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-      
+	  
+              <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>	  
+	  
+	  
   </dependencies>
   <build>
    <finalName>2018ht66507</finalName> 
 	</build>
   <reporting>
     <plugins>
-<plugin>
+	                <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>	    
+		<plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.version}</version>
