--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,18 @@
   <build>
    <finalName>2018ht66507</finalName> 
 	</build>
- 
+    <plugins>
+	 <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <!-- select non-aggregate reports -->
+              <report>report</report>
+            </reports>
+ 	</reportSet>
+        </reportSets>
+      </plugin> 
+      </plugins>
 </project>
