--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,12 @@
   <name>Security-jenkins-git-integration-Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
+	
 	<build>
 		<plugins>
 			
